src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__assign_pointer_to_too_small_type_result_in_an_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E065]: The type DWORD 32 is too small to hold a Pointer
  ┌─ <internal>:9:13
  │
9 │             address := ptr;         //should throw error as address is too small to store full pointer
  │             ^^^^^^^^^^^^^^ The type DWORD 32 is too small to hold a Pointer

error[E037]: Invalid assignment: cannot assign 'REF_TO INT' to 'DWORD'
  ┌─ <internal>:9:13
  │
9 │             address := ptr;         //should throw error as address is too small to store full pointer
  │             ^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'REF_TO INT' to 'DWORD'
